--- a/composer.json
+++ b/composer.json
@@ -1,4 +1,6 @@
 {
+    "name": "geoffroycol/blog",
+    "description": "blog avec api platform",
     "type": "project",
     "license": "proprietary",
     "minimum-stability": "dev",
