--- a/composer.json
+++ b/composer.json
@@ -27,6 +27,7 @@
         "symfony/proxy-manager-bridge": "5.2.*",
         "symfony/security-bundle": "5.2.*",
         "symfony/serializer": "5.2.*",
+        "symfony/translation": "5.2.*",
         "symfony/twig-bundle": "5.2.*",
         "symfony/validator": "5.2.*",
         "symfony/yaml": "5.2.*"
@@ -75,6 +76,7 @@
         }
     },
     "require-dev": {
+        "hautelook/alice-bundle": "^2.9",
         "symfony/maker-bundle": "^1.29",
         "symfony/phpunit-bridge": "^5.2"
     }
