--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "nelmio/cors-bundle": "^2.1",
         "phpdocumentor/reflection-docblock": "^5.2",
         "symfony/asset": "5.2.*",
+        "symfony/browser-kit": "5.2.*",
         "symfony/console": "5.2.*",
         "symfony/dotenv": "5.2.*",
         "symfony/expression-language": "5.2.*",
@@ -77,6 +78,9 @@
     },
     "require-dev": {
         "hautelook/alice-bundle": "^2.9",
+        "justinrainbow/json-schema": "^5.2",
+        "symfony/css-selector": "^5.2",
+        "symfony/http-client": "5.2.*",
         "symfony/maker-bundle": "^1.29",
         "symfony/phpunit-bridge": "^5.2"
     }
