Ajout de CategoryDataProvinder + test

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -39,3 +39,4 @@ services:
         autoconfigure: false
 
     App\DataPersister\UserDataPersister: ~
+    App\DataPersister\CategoryDataPersister: ~
